We'll use the Mongoose ODM

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   , "private": true
   , "dependencies": {
       "express": "2.5.8"
-    , "jade": ">= 0.0.1"
+    , "jade": ">= 0.26.0"
+    , "mongoose": ">= 2.6.3"
   }
 }
