--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-    "name": "application-name"
+    "name": "kittenmash"
   , "version": "0.0.1"
   , "private": true
   , "dependencies": {
       "express": "2.5.8"
     , "jade": ">= 0.26.0"
     , "mongoose": ">= 2.6.3"
+    , "express-mongoose": ">= 0.0.5"
+    , "express-resource": ">= 0.2.4"
   }
 }
