--- a/package.json
+++ b/package.json
@@ -9,4 +9,8 @@
     , "express-mongoose": ">= 0.0.5"
     , "express-resource": ">= 0.2.4"
   }
+  , "engines": {
+      "node": "0.6.x",
+      "npm": "1.1.x"
+  }
 }
